# wpi-bazel-deps-rules

./: .gitignore  WORKSPACE
.github/workflows/: lint.yml
allwpilib/: BUILD.tpl  deps.bzl  load_allwpilib.bzl  load_allwpilib_from_maven.bzl  load_allwpilib_from_source.bzl  repo.tpl
allwpilib/from_maven/: load_template.bzl
allwpilib/from_maven/maven_2021_3_1/: BUILD  repo.bzl
allwpilib/from_source/: BUILD  load_template.bzl  repo.bzl
pathweaver/: load_pathweaver_from_maven.bzl  load_pathweaver_from_source.bzl
pathweaver/from_maven/: BUILD.bazel
pathweaver/from_maven/maven_2021_3_1/: BUILD.bazel  repo.bzl
pathweaver/from_source/: BUILD.bazel  repo.bzl
rules/: wpilibc_robot.bzl  wpilibj_robot.bzl
shuffleboard/: load_shuffleboard_from_maven.bzl  load_shuffleboard_from_source.bzl
shuffleboard/from_maven/maven_2021_3_1/: BUILD.bazel  repo.bzl
shuffleboard/from_source/: BUILD.bazel  repo.bzl
